fixes alignment on single shoe

--- a/src/App.css
+++ b/src/App.css
@@ -57,15 +57,12 @@
 }
 
 .main {
+    text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 40vh;
-}
-
-body {
-    text-align: center;
 }
 
 h1 {
